<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7"
    android:background="@drawable/vvv1">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="182dp"
        android:text="RooMs"
        android:textColor="@color/white"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="88dp"
        android:background="@color/black"
        android:text="Single Sharing"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="132dp"
        android:layout_height="120dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/single" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="355dp"
        android:layout_height="48dp"


        android:layout_marginStart="27dp"
        android:background="@color/black"


        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="10dp"
        android:scrollHorizontally="true"

        android:singleLine="true"
        android:text="@string/single"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="7dp"
        android:background="@color/black"
        android:text="Double Sharing"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="121dp"
        android:layout_height="122dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/dddd" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="358dp"
        android:layout_height="48dp"

        android:layout_marginStart="29dp"
        android:background="@color/black"


        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="10dp"
        android:scrollHorizontally="true"


        android:singleLine="true"
        android:text="@string/doubl"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        android:text="Triple Sharing"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="116dp"
        android:layout_height="93dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="113dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/triple" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"

        android:background="@color/black"
        android:ellipsize="marquee"


        android:marqueeRepeatLimit="marquee_forever"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:singleLine="true"

        android:text="@string/Triple"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/button_text_color"
        android:text="book now"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="1dp"
        android:background="@color/teal_700"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"

        android:padding="10dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="Hurry Up!!!  Take Admission in Hostel Today. Last Date od admission 12/04/2023"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</androidx.constraintlayout.widget.ConstraintLayout>